Thu May 31 09:12:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_qos_xml_handler.mpb:
        * MPC/config/dds4ccm_qos_xml_handler_base.mpb:
        * connectors/dds4ccm/tools/QOS_XML_Handler/XML_File_Intf.cpp:
        * connectors/dds4ccm/tools/QOS_XML_Handler/qos_xml_handler.mpc:
        * tests/IDL3_to_XMI/IDL2XMI_Test/IDL2XMI_Test.mpc:
        * tests/IDL3_to_XMI/IDL2XMI_Test/XML_Helper.h:
        * tests/IDL3_to_XMI/IDL2XMI_Test/XML_Helper.cpp:
        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:
        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.h:
        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:
        * tools/IDL3_to_XMI/IR_Simulator_visitor.h:
          Updated because DAnCE XML_Utils has been moved to ACE as ACE_XML_Utils

Thu May 31 08:12:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ciao.doxygen:
        * etc/ciao_dds4ccm.doxygen:
          Fixed input location

Thu May 31 06:32:23 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QoS/dump:
        * connectors/dds4ccm/tests/QoS/dump/dds4ccm_qos_dump.mpc:
        * connectors/dds4ccm/tests/QoS/dump/qos.xml:
        * connectors/dds4ccm/tests/QoS/dump/qos_dump.cpp:
        * connectors/dds4ccm/tests/QoS/dump/run_test.pl:
          Added basic QOS XML test. This test just dumps the
          IDL QOS structure after parsing.

Wed May 30 13:24:42 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/schema:

        * connectors/dds4ccm/docs/schema/dds_qos.xsd:
        * connectors/dds4ccm/docs/schema/xsc-banner.h:
        * connectors/dds4ccm/docs/schema/xsc-banner.cpp:
          Added schema for all DDS4CCM QOS files.

Wed May 30 11:26:24 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/descriptors/Getter_Library.xml:
        * connectors/dds4ccm/tests/KeyedWriter/descriptors/KeyedWriter_Library.xml: