@@ -60,8 +60,8 @@ namespace dds
 #include <memory>
 #include <string>
 #include <list>
-#include "XMLSchema/Types.hpp"
-#include "XMLSchema/id_map.hpp"
+#include "ace/XML_Utils/XMLSchema/Types.hpp"
+#include "ace/XML_Utils/XMLSchema/id_map.hpp"
 #include "ace/Refcounted_Auto_Ptr.h"
 #include "ace/Null_Mutex.h"
 #include "ace/TSS_T.h"
@@ -2246,7 +2246,7 @@ namespace dds
   }
 }
 
-#include "XMLSchema/Traversal.hpp"
+#include "ace/XML_Utils/XMLSchema/Traversal.hpp"
 
 namespace dds
 {
@@ -4496,7 +4496,7 @@ namespace dds
   }
 }
 
-#include "XMLSchema/Writer.hpp"
+#include "ace/XML_Utils/XMLSchema/Writer.hpp"
 
 namespace dds
 {
